# SPDX-FileCopyrightText: 2018-2022 Joonas Javanainen <joonas.javanainen@gmail.com>
#
# SPDX-License-Identifier: MIT OR Apache-2.0

[package]
name = "mcp2210"
version = "0.2.0"
authors = ["Joonas Javanainen <joonas.javanainen@gmail.com>"]
edition = "2021"
rust-version = "1.63"
description = "Microchip MCP2210 communication library"
homepage = "https://github.com/Gekkio/mcp2210-rs"
repository = "https://github.com/Gekkio/mcp2210-rs"
license = "MIT OR Apache-2.0"
keywords = ["MCP2210", "SPI", "serial", "communication"]
categories = ["hardware-support"]
readme = "README.markdown"

[dependencies]
bitflags = "2.4"
hidapi = "2.4.1"
